fix about on small desktop

--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -3,7 +3,7 @@
   height: 100%;
   background-color: #2d2e7d;
   color: white; 
-  padding: 120px 0px;
+  padding: 80px 0px;
   position: absolute;
   z-index: 100;
 
@@ -24,6 +24,8 @@
   & .about-wrapper {
     max-width: 75%;
     margin: auto;
+    height: inherit;
+    overflow-y: scroll;
   }
 
   & .close-about {
